<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/TopBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7497403023351367/8908984336">
        </com.google.android.gms.ads.AdView>

        <Switch
            android:id="@+id/autodetect_Switch"
            style="@style/Headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto detect noise "
            android:clickable="true"
            android:onClick="checkPermission"
            />

        <TextView
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration_header" />

        <RadioGroup
            android:id="@+id/radioGroupMins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton10"
                style="@style/RadButtons"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/duration_10_minutes" />

            <RadioButton
                android:id="@+id/radioButton20"
                style="@style/RadButtons"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/duration_20_minutes" />

            <RadioButton
                android:id="@+id/radioButton40"
                style="@style/RadButtons"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/duration_40_minutes" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_header"
            android:paddingBottom="8dp"/>

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonWaves"
                style="@style/RadioBOcean"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="top"
                android:paddingBottom="16dp"
                android:text="@string/type_waves" />

            <RadioButton
                android:id="@+id/radioButtonFan"
                style="@style/RadioBFan"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="top"
                android:paddingBottom="16dp"
                android:text="@string/type_fan" />

            <RadioButton
                android:id="@+id/radioButtonTele"
                style="@style/RadioBTV"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="top"
                android:paddingBottom="16dp"
                android:text="@string/type_tele" />

        </RadioGroup>

        <TextView
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Volume" />


        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:progress="80" />

        <Button
            android:id="@+id/play_Button"
            style="@style/buttonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playWhiteNoiseButton"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:layout_gravity="center_horizontal"
            android:text="On / Off" />

    </LinearLayout>
</ScrollView>